--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <div class="wrapper">    
+  <div class="wrapper catalog__wrapper">    
     <nav class="menu">
       <div class="container">
         <ul class="menu__list">
@@ -365,76 +365,76 @@
           </ul>
         </div>
         <div class="filter">
-            <form action="#" class="filter__form">
-              <div class="filter__row">                
-                <div class="filter__col">
-                  <div class="filter__col-name">Страна</div>                                
-                  <select class="select">
-                    <option class="filter__option">Все</option>
-                    <option class="filter__option">Азия и Океания</option>
-                    <option class="filter__option">Америка</option>
-                  </select>                 
-                </div>
-                <div class="filter__col">
-                  <div class="filter__col-name">Вид кофе</div>                                
-                  <select class="select">
-                    <option class="filter__option">Все</option>
-                    <option class="filter__option">Слабая</option>
-                    <option class="filter__option">Средняя</option>
-                  </select>                 
-                </div>
-                <div class="filter__col">
-                  <div class="filter__col-name">Степень обжарки</div>                                
-                  <select class="select">
-                    <option class="filter__option">Все</option>
-                    <option class="filter__option">Купажи</option>
-                    <option class="filter__option">Моносорта</option>
-                  </select>                 
-                </div> 
-                <div class="filter__col">
-                  <div class="filter__col-name">Кислинка</div>                                
-                  <select class="select">
-                    <option class="filter__option">Все</option>
-                    <option class="filter__option">Моносорта</option>
-                    <option class="filter__option">Моносорта</option>
-                  </select>                 
-                </div>
-                <div class="filter__col">
-                  <div class="filter__col-name">Сладость</div>                                
-                  <select class="select">
-                    <option class="filter__option">Все</option>
-                    <option class="filter__option">Купажи</option>
-                    <option class="filter__option">Моносорта</option>
-                  </select>                 
-                </div>
-                <div class="filter__col">
-                  <div class="filter__col-name">Горчинка</div>                                
-                  <select class="select">
-                    <option class="filter__option">Все</option>
-                    <option class="filter__option">Купажи</option>
-                    <option class="filter__option">Моносорта</option>
-                  </select>                 
-                </div>
-                <div class="filter__col">
-                  <div class="filter__col-name">Крепость</div>                                
-                  <select class="select">
-                    <option class="filter__option">Все</option>
-                    <option class="filter__option">Купажи</option>
-                    <option class="filter__option">Моносорта</option>
-                  </select>                 
-                </div>
-                <div class="filter__col">
-                  <div class="filter__col-name">Цена</div>
-                  <div class="ui-slider"></div>
-                  <div class="filter__price">От <span class="filter__price-value">500</span> до <span class="filter__price-value">1188</span> руб</div>            
-                </div> 
-                <div class="filter__col">
-                  <button class="filter__btn">Применить</button>
-                  <div class="filter__choice">Выбрано: <span class="filter__choice-value">0</span></div>
-                  <a href="#" class="filter__link">Показать</a>
-                </div>
+          <form action="#" class="filter__form">
+            <div class="filter__row">                
+              <div class="filter__col">
+                <div class="filter__col-name">Страна</div>                                
+                <select class="select">
+                  <option class="filter__option">Все</option>
+                  <option class="filter__option">Азия и Океания</option>
+                  <option class="filter__option">Америка</option>
+                </select>                 
               </div>
-            </form>         
+              <div class="filter__col">
+                <div class="filter__col-name">Вид кофе</div>                                
+                <select class="select">
+                  <option class="filter__option">Все</option>
+                  <option class="filter__option">Слабая</option>
+                  <option class="filter__option">Средняя</option>
+                </select>                 
+              </div>
+              <div class="filter__col">
+                <div class="filter__col-name">Степень обжарки</div>                                
+                <select class="select">
+                  <option class="filter__option">Все</option>
+                  <option class="filter__option">Купажи</option>
+                  <option class="filter__option">Моносорта</option>
+                </select>                 
+              </div> 
+              <div class="filter__col">
+                <div class="filter__col-name">Кислинка</div>                                
+                <select class="select">
+                  <option class="filter__option">Все</option>
+                  <option class="filter__option">Моносорта</option>
+                  <option class="filter__option">Моносорта</option>
+                </select>                 
+              </div>
+              <div class="filter__col">
+                <div class="filter__col-name">Сладость</div>                                
+                <select class="select">
+                  <option class="filter__option">Все</option>
+                  <option class="filter__option">Купажи</option>
+                  <option class="filter__option">Моносорта</option>
+                </select>                 
+              </div>
+              <div class="filter__col">
+                <div class="filter__col-name">Горчинка</div>                                
+                <select class="select">
+                  <option class="filter__option">Все</option>
+                  <option class="filter__option">Купажи</option>
+                  <option class="filter__option">Моносорта</option>
+                </select>                 
+              </div>
+              <div class="filter__col">
+                <div class="filter__col-name">Крепость</div>                                
+                <select class="select">
+                  <option class="filter__option">Все</option>
+                  <option class="filter__option">Купажи</option>
+                  <option class="filter__option">Моносорта</option>
+                </select>                 
+              </div>
+              <div class="filter__col">
+                <div class="filter__col-name">Цена</div>
+                <div class="ui-slider"></div>
+                <div class="filter__price">От <span class="filter__price-value">500</span> до <span class="filter__price-value">1188</span> руб</div>            
+              </div> 
+              <div class="filter__col">
+                <button class="filter__btn">Применить</button>
+                <div class="filter__choice">Выбрано: <span class="filter__choice-value">0</span></div>
+                <a href="#" class="filter__link">Показать</a>
+              </div>
+            </div>
+          </form>      
         </div>
         <ul class="sorting">
           <li class="sorting__item">
@@ -817,7 +817,7 @@
         </div>
       </main>
     </div>
-    <footer class="footer">
+    <footer class="footer catalog__footer">
       <div class="container footer__container">
         <div class="logo">
           <a href="#" class="logo__link">
@@ -875,27 +875,27 @@
               <ul class="socials__list">
                 <li class="socials__item">
                   <a href="#" class="socials__link">
-                    <img src="./img/socials/fb.png" class="socials__img">
+                    <img src="./img/socials/fb.png" alt="facebook" class="socials__img">
                   </a>
                 </li>
                 <li class="socials__item">
                   <a href="#" class="socials__link">
-                    <img src="./img/socials/vk.png" class="socials__img">
+                    <img src="./img/socials/vk.png" alt="vk" class="socials__img">
                   </a>
                 </li>
                 <li class="socials__item">
                   <a href="#" class="socials__link">
-                    <img src="./img/socials/ok.png" class="socials__img">
+                    <img src="./img/socials/ok.png" alt="ok" class="socials__img">
                   </a>                
                 </li>
                 <li class="socials__item">
                   <a href="#" class="socials__link">
-                    <img src="./img/socials/yt.png" class="socials__img">
+                    <img src="./img/socials/yt.png" alt="youtube"class="socials__img">
                   </a>
                 </li>
                 <li class="socials__item">
                   <a href="#" class="socials__link">
-                    <img src="./img/socials/instagrem.png" class="socials__img">
+                    <img src="./img/socials/instagrem.png" alt="instagram" class="socials__img">
                   </a>
                 </li>
               </ul>
