--- a/o-nas.html
+++ b/o-nas.html
@@ -459,27 +459,27 @@
               <ul class="socials__list">
                 <li class="socials__item">
                   <a href="#" class="socials__link">
-                    <img src="./img/socials/fb.png" class="socials__img">
+                    <img src="./img/socials/fb.png" alt="facebook" class="socials__img">
                   </a>
                 </li>
                 <li class="socials__item">
                   <a href="#" class="socials__link">
-                    <img src="./img/socials/vk.png" class="socials__img">
+                    <img src="./img/socials/vk.png" alt="vk" class="socials__img">
                   </a>
                 </li>
                 <li class="socials__item">
                   <a href="#" class="socials__link">
-                    <img src="./img/socials/ok.png" class="socials__img">
+                    <img src="./img/socials/ok.png" alt="ok" class="socials__img">
                   </a>                
                 </li>
                 <li class="socials__item">
                   <a href="#" class="socials__link">
-                    <img src="./img/socials/yt.png" class="socials__img">
+                    <img src="./img/socials/yt.png" alt="youtube"class="socials__img">
                   </a>
                 </li>
                 <li class="socials__item">
                   <a href="#" class="socials__link">
-                    <img src="./img/socials/instagrem.png" class="socials__img">
+                    <img src="./img/socials/instagrem.png" alt="instagram" class="socials__img">
                   </a>
                 </li>
               </ul>
