--- a/personal.html
+++ b/personal.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <div class="wrapper">    
+  <div class="wrapper">
     <nav class="menu">
       <div class="container">
         <ul class="menu__list">
@@ -384,19 +384,19 @@
                 <td class="auth__table-row"></td>
                 <td class="auth__table-row"><input class="personal__btn" type="submit" name="Login" value="Войти" /></td>
               </tr>
-            </table>        
-            <noindex>
-              <span>
-                <a class="personal__link" href="#" rel="nofollow">Забыли свой пароль?</a>
-              </span>
-            </noindex>        
-            <noindex>
-              <span>
-                <a class="personal__link" href="#" rel="nofollow">Зарегистрироваться</a>
-                Если вы впервые на сайте, заполните, пожалуйста, регистрационную форму.
-              </span>
-            </noindex>        
-          </form>
+            </table> 
+          </form>       
+          <noindex>
+            <span>
+              <a class="personal__link" href="#" rel="nofollow">Забыли свой пароль?</a>
+            </span>
+          </noindex>        
+          <noindex>
+            <span>
+              <a class="personal__link" href="#" rel="nofollow">Зарегистрироваться</a>
+              Если вы впервые на сайте, заполните, пожалуйста, регистрационную форму.
+            </span>
+          </noindex>
         </section> 
       </main>
     </div>
@@ -458,27 +458,27 @@
               <ul class="socials__list">
                 <li class="socials__item">
                   <a href="#" class="socials__link">
-                    <img src="./img/socials/fb.png" class="socials__img">
+                    <img src="./img/socials/fb.png" alt="facebook" class="socials__img">
                   </a>
                 </li>
                 <li class="socials__item">
                   <a href="#" class="socials__link">
-                    <img src="./img/socials/vk.png" class="socials__img">
+                    <img src="./img/socials/vk.png" alt="vk" class="socials__img">
                   </a>
                 </li>
                 <li class="socials__item">
                   <a href="#" class="socials__link">
-                    <img src="./img/socials/ok.png" class="socials__img">
-                  </a>                
-                </li>
-                <li class="socials__item">
-                  <a href="#" class="socials__link">
-                    <img src="./img/socials/yt.png" class="socials__img">
+                    <img src="./img/socials/ok.png" alt="ok" class="socials__img">
                   </a>
                 </li>
                 <li class="socials__item">
                   <a href="#" class="socials__link">
-                    <img src="./img/socials/instagrem.png" class="socials__img">
+                    <img src="./img/socials/yt.png" alt="youtube" class="socials__img">
+                  </a>
+                </li>
+                <li class="socials__item">
+                  <a href="#" class="socials__link">
+                    <img src="./img/socials/instagrem.png" alt="instagram" class="socials__img">
                   </a>
                 </li>
               </ul>
@@ -495,6 +495,7 @@
   <script src="./libs/jquery/jquery-3.4.1.min.js"></script>
   <script src="./libs/owl-carousel/owl.carousel.min.js"></script>
   <script src="./libs/jquery-ui/jquery-ui.min.js"></script>
+  <script src="./libs/ddslick/ddslick.js"></script>
   <script src="./js/script.min.js"></script>
 </body>
 
