--- a/personal.html
+++ b/personal.html
@@ -53,12 +53,11 @@
         <div class="header__content">
           <div class="header__content-row">
             <div class="header__content-col header__wrap">
-              <div class="city">
-                <a href="#" class="city__link">Москва</a>
-                <ul class="city__drop">
-                  <li class="city__drop-item">Москва</li>
-                </ul>
-              </div>              
+              <div class="city__wrap">                  
+                <select name="city" id="city">
+                  <option value="Москва" selected>Москва</option>
+                </select>
+              </div>
             </div>
             <div class="header__content-col header__wrap">
               <form class="search" action="#">
