--- a/blog.html
+++ b/blog.html
@@ -231,7 +231,7 @@
         </div>
         <ul class="goods scrolled__goods">
           <li class="goods__item">
-            <a href="" class="goods__link">Кофе</a>
+            <a href="./catalog.html" class="goods__link">Кофе</a>
             <div class="goods__drop">
               <ul class="goods__drop-list">
                 <li class="goods__drop-item">
