--- a/catalog.html
+++ b/catalog.html
@@ -975,12 +975,19 @@
         </div>
       </div>
     </footer>
-
+    <div class="modal">
+      <div class="modal__inner">
+        <button class="modal__close"></button>
+        <h3 class="modal__title">Товар успешно добавлен в список сравнения</h3>
+      </div>
+    </div>
   </div>
+  
   <script src="./libs/jquery/jquery-3.4.1.min.js"></script>
   <script src="./libs/owl-carousel/owl.carousel.min.js"></script>
   <script src="./libs/jquery-ui/jquery-ui.min.js"></script>
   <script src="./libs/ddslick/ddslick.js"></script>
+  <script src="./libs/jquery-ui/jquery-ui-touch-punch.min.js"></script>
   <script src="./js/script.min.js"></script>
 
 </body>
