--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         </div>
         <ul class="goods scrolled__goods">
           <li class="goods__item">
-            <a href="" class="goods__link">Кофе</a>
+            <a href="./catalog.html" class="goods__link">Кофе</a>
             <div class="goods__drop">
               <ul class="goods__drop-list">
                 <li class="goods__drop-item">
@@ -500,11 +500,9 @@
             <div class="company-contacts__copyright">&#169; 2017 Магазин кофе и чая</div>
             <a href="mailto:#" class="company-contacts__mail">marketing@tzarpo.ru</a>
           </div>
-
         </div>
       </div>
     </footer>
-
   </div>
   <script src="./libs/jquery/jquery-3.4.1.min.js"></script>
   <script src="./libs/owl-carousel/owl.carousel.min.js"></script>
