--- a/bongid.html
+++ b/bongid.html
@@ -44,182 +44,182 @@
       </div>
     </nav>
     <header class="header">
-        <div class="container">
-          <div class="logo">
-            <a href="./index.html" class="logo__link">
-              <img src="./img/header/logo.png" alt="Компания Bonka" class="logo__pic">
-            </a>
+      <div class="container">
+        <div class="logo">
+          <a href="./index.html" class="logo__link">
+            <img src="./img/header/logo.png" alt="Компания Bonka" class="logo__pic">
+          </a>
+        </div>
+        <div class="header__content">
+          <div class="header__content-row">
+            <div class="header__content-col header__wrap">
+              <div class="city__wrap">                  
+                <select name="city" id="city">
+                  <option value="Москва" selected>Москва</option>
+                </select>
+              </div>             
+            </div>
+            <div class="header__content-col header__wrap">
+              <form class="search" action="#">
+                <div class="search__inner">
+                  <input class="search__input" type="text" placeholder="Поиск">
+                  <button class="search__btn">
+                    <i class="fa fa-search"></i>
+                  </button>
+                </div>
+              </form>
+            </div>
+            <div class="header__content-col">
+              <div class="phones">
+                <span class="header__icon"><i class="fa fa-phone-square"></i></span>
+                <span class="phones__wrap">
+                  <a class="phones__link" href="tel:#">+7(495) 510-52-18</a>
+                  <a class="phones__link" href="tel:#">+7(925) 031-13-37</a>
+                </span>
+              </div>
+            </div>
+            <div class="header__content-col">
+              <div class="compare">
+                <a href="#" class="compare__link">
+                  <span class="header__icon"><i class="fa fa-balance-scale"></i></span>
+                  <span class="compare__text">В сравнении&nbsp;<span class="compare__count">0</span></span>                  
+                </a>
+              </div>
+            </div>
+            <div class="header__content-col">
+              <div class="cart">
+                <a href="#" class="cart__link">
+                  <div class="cart__img">
+                    <span class="header__icon"><i class="fa fa-shopping-bag"></i></span>
+                  </div>                
+                  <div class="cart__text">
+                    <span class="cart__count-text">Товаров</span>
+                    <span class="cart__count-num">0</span>
+                    <br>                         
+                    <span class="cart__sum-text">На сумму</span>
+                    <span class="cart__sum-num">0 руб</span>
+                  </div>                
+                </a>
+              </div>
+            </div>
           </div>
-          <div class="header__content">
-            <div class="header__content-row">
-              <div class="header__content-col header__wrap">
-                <div class="city__wrap">                  
-                  <select name="city" id="city">
-                    <option value="Москва" selected>Москва</option>
-                  </select>
-                </div>             
-              </div>
-              <div class="header__content-col header__wrap">
-                <form class="search" action="#">
-                  <div class="search__inner">
-                    <input class="search__input" type="text" placeholder="Поиск">
-                    <button class="search__btn">
-                      <i class="fa fa-search"></i>
-                    </button>
-                  </div>
-               </form>
-              </div>
-              <div class="header__content-col">
-                <div class="phones">
-                  <span class="header__icon"><i class="fa fa-phone-square"></i></span>
-                  <span class="phones__wrap">
-                    <a class="phones__link" href="tel:#">+7(495) 510-52-18</a>
-                    <a class="phones__link" href="tel:#">+7(925) 031-13-37</a>
-                  </span>
+          <div class="header__content-row">
+            <ul class="goods">
+              <li class="goods__item">                
+                <a href="./catalog.html" class="goods__link">
+                    <img src="./img/header/coffee-icon.png" alt="" class="goods__img">
+                    <span class="goods__text">Кофе</span>
+                </a>
+                <div class="goods__drop">
+                  <ul class="goods__drop-list">
+                    <li class="goods__drop-item">
+                      <a href="#" class="goods__drop-link">Десертные</a>
+                    </li>
+                    <li class="goods__drop-item">
+                      <a href="#" class="goods__drop-link">Зерновой кофе в пакетах дой пак с застежкой зип лок</a>
+                    </li>
+                    <li class="goods__drop-item">
+                      <a href="#" class="goods__drop-link">Кофе в капсулах</a>
+                    </li>
+                    <li class="goods__drop-item">
+                      <a href="#" class="goods__drop-link">Купажи</a>
+                    </li>
+                    <li class="goods__drop-item">
+                      <a href="#" class="goods__drop-link">Молотый кофе в подарочной упаковке</a>
+                    </li>
+                    <li class="goods__drop-item">
+                      <a href="#" class="goods__drop-link">Плантационные</a>
+                    </li>
+                    <li class="goods__drop-item">
+                      <a href="#" class="goods__drop-link">Плантационный кофе</a>
+                    </li>
+                    <li class="goods__drop-item">
+                      <a href="#" class="goods__drop-link">Элитные</a>
+                    </li>
+                  </ul>
                 </div>
-              </div>
-              <div class="header__content-col">
-                <div class="compare">
-                  <a href="#" class="compare__link">
-                    <span class="header__icon"><i class="fa fa-balance-scale"></i></span>
-                    <span class="compare__text">В сравнении&nbsp;<span class="compare__count">0</span></span>                  
-                  </a>
+              </li>
+              <li class="goods__item">                
+                <a href="./catalog.html" class="goods__link">
+                  <img src="./img/header/tea-icon.png" alt="" class="goods__img">
+                  <span class="goods__text">Чай</span>
+                </a>
+                <div class="goods__drop">
+                  <ul class="goods__drop-list">
+                    <li class="goods__drop-item">
+                      <a href="#" class="goods__drop-link">Ароматизированный зеленый чай</a>
+                    </li>
+                    <li class="goods__drop-item">
+                      <a href="#" class="goods__drop-link">Ароматизированный черный чай</a>
+                    </li>
+                    <li class="goods__drop-item">
+                      <a href="#" class="goods__drop-link">Белый чай</a>
+                    </li>
+                    <li class="goods__drop-item">
+                      <a href="#" class="goods__drop-link">Жасминовый чай</a>
+                    </li>
+                    <li class="goods__drop-item">
+                      <a href="#" class="goods__drop-link">Классический зеленый чай</a>
+                    </li>
+                    <li class="goods__drop-item">
+                      <a href="#" class="goods__drop-link">Классический черный чай</a>
+                    </li>
+                    <li class="goods__drop-item">
+                      <a href="#" class="goods__drop-link">Композиционный чай</a>
+                    </li>
+                    <li class="goods__drop-item">
+                      <a href="#" class="goods__drop-link">Пу Эр</a>
+                    </li>
+                    <li class="goods__drop-item">
+                      <a href="#" class="goods__drop-link">Связанный чай</a>
+                    </li>
+                    <li class="goods__drop-item">
+                      <a href="#" class="goods__drop-link">Улун</a>
+                    </li>
+                    <li class="goods__drop-item">
+                      <a href="#" class="goods__drop-link">Чайные напитки</a>
+                    </li>
+                  </ul>
                 </div>
-              </div>
-              <div class="header__content-col">
-                <div class="cart">
-                  <a href="#" class="cart__link">
-                    <div class="cart__img">
-                      <span class="header__icon"><i class="fa fa-shopping-bag"></i></span>
-                    </div>                
-                    <div class="cart__text">
-                      <span class="cart__count-text">Товаров</span>
-                      <span class="cart__count-num">0</span>
-                      <br>                         
-                      <span class="cart__sum-text">На сумму</span>
-                      <span class="cart__sum-num">0 руб</span>
-                    </div>                
-                  </a>
-                </div>
-              </div>
-            </div>
-            <div class="header__content-row">
-              <ul class="goods">
-                <li class="goods__item">                
-                  <a href="./catalog.html" class="goods__link">
-                      <img src="./img/header/coffee-icon.png" alt="" class="goods__img">
-                      <span class="goods__text">Кофе</span>
-                  </a>
-                  <div class="goods__drop">
-                    <ul class="goods__drop-list">
-                      <li class="goods__drop-item">
-                        <a href="#" class="goods__drop-link">Десертные</a>
-                      </li>
-                      <li class="goods__drop-item">
-                        <a href="#" class="goods__drop-link">Зерновой кофе в пакетах дой пак с застежкой зип лок</a>
-                      </li>
-                      <li class="goods__drop-item">
-                        <a href="#" class="goods__drop-link">Кофе в капсулах</a>
-                      </li>
-                      <li class="goods__drop-item">
-                        <a href="#" class="goods__drop-link">Купажи</a>
-                      </li>
-                      <li class="goods__drop-item">
-                        <a href="#" class="goods__drop-link">Молотый кофе в подарочной упаковке</a>
-                      </li>
-                      <li class="goods__drop-item">
-                        <a href="#" class="goods__drop-link">Плантационные</a>
-                      </li>
-                      <li class="goods__drop-item">
-                        <a href="#" class="goods__drop-link">Плантационный кофе</a>
-                      </li>
-                      <li class="goods__drop-item">
-                        <a href="#" class="goods__drop-link">Элитные</a>
-                      </li>
-                    </ul>
-                  </div>
-                </li>
-                <li class="goods__item">                
-                  <a href="./catalog.html" class="goods__link">
-                    <img src="./img/header/tea-icon.png" alt="" class="goods__img">
-                    <span class="goods__text">Чай</span>
-                  </a>
-                  <div class="goods__drop">
-                    <ul class="goods__drop-list">
-                      <li class="goods__drop-item">
-                        <a href="#" class="goods__drop-link">Ароматизированный зеленый чай</a>
-                      </li>
-                      <li class="goods__drop-item">
-                        <a href="#" class="goods__drop-link">Ароматизированный черный чай</a>
-                      </li>
-                      <li class="goods__drop-item">
-                        <a href="#" class="goods__drop-link">Белый чай</a>
-                      </li>
-                      <li class="goods__drop-item">
-                        <a href="#" class="goods__drop-link">Жасминовый чай</a>
-                      </li>
-                      <li class="goods__drop-item">
-                        <a href="#" class="goods__drop-link">Классический зеленый чай</a>
-                      </li>
-                      <li class="goods__drop-item">
-                        <a href="#" class="goods__drop-link">Классический черный чай</a>
-                      </li>
-                      <li class="goods__drop-item">
-                        <a href="#" class="goods__drop-link">Композиционный чай</a>
-                      </li>
-                      <li class="goods__drop-item">
-                        <a href="#" class="goods__drop-link">Пу Эр</a>
-                      </li>
-                      <li class="goods__drop-item">
-                        <a href="#" class="goods__drop-link">Связанный чай</a>
-                      </li>
-                      <li class="goods__drop-item">
-                        <a href="#" class="goods__drop-link">Улун</a>
-                      </li>
-                      <li class="goods__drop-item">
-                        <a href="#" class="goods__drop-link">Чайные напитки</a>
-                      </li>
-                    </ul>
-                  </div>
-                </li>
-                <li class="goods__item">
-                  <a href="./catalog.html" class="goods__link">                  
-                    <img src="./img/header/dishes.png" alt="" class="goods__img">
-                    <span class="goods__text">Посуда</span>
-                  </a>
-                </li>
-                <li class="goods__item">                
-                  <a href="./catalog.html" class="goods__link">
-                    <img src="./img/header/sweet-icon.png" alt="" class="goods__img">
-                    <span class="goods__text">Сладости</span>
-                  </a>
-                </li>
-                <li class="goods__item">                
-                  <a href="./catalog.html" class="goods__link">
-                    <img src="./img/header/sugar-icon.png" alt="" class="goods__img">
-                    <span class="goods__text">Сахар</span>
-                  </a>
-                </li>
-                <li class="goods__item">                
-                  <a href="./catalog.html" class="goods__link">
-                    <img src="./img/header/coffeemachine-icon.png" alt="" class="goods__img">
-                    <span class="goods__text">Кофемашины</span>
-                  </a>
-                </li>
-                <li class="goods__item">
-                  <a href="./catalog.html" class="goods__link">
-                    <span class="goods__text">Кофе в  шоколаде</span>
-                  </a>
-                </li>
-                <li class="goods__item">
-                  <a href="./catalog.html" class="goods__link">
-                    <span class="goods__text">Прочее</span>
-                  </a>
-                </li>
-              </ul>
-            </div>
+              </li>
+              <li class="goods__item">
+                <a href="./catalog.html" class="goods__link">                  
+                  <img src="./img/header/dishes.png" alt="" class="goods__img">
+                  <span class="goods__text">Посуда</span>
+                </a>
+              </li>
+              <li class="goods__item">                
+                <a href="./catalog.html" class="goods__link">
+                  <img src="./img/header/sweet-icon.png" alt="" class="goods__img">
+                  <span class="goods__text">Сладости</span>
+                </a>
+              </li>
+              <li class="goods__item">                
+                <a href="./catalog.html" class="goods__link">
+                  <img src="./img/header/sugar-icon.png" alt="" class="goods__img">
+                  <span class="goods__text">Сахар</span>
+                </a>
+              </li>
+              <li class="goods__item">                
+                <a href="./catalog.html" class="goods__link">
+                  <img src="./img/header/coffeemachine-icon.png" alt="" class="goods__img">
+                  <span class="goods__text">Кофемашины</span>
+                </a>
+              </li>
+              <li class="goods__item">
+                <a href="./catalog.html" class="goods__link">
+                  <span class="goods__text">Кофе в  шоколаде</span>
+                </a>
+              </li>
+              <li class="goods__item">
+                <a href="./catalog.html" class="goods__link">
+                  <span class="goods__text">Прочее</span>
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
+      </div>
     </header>
     <div class="scrolled">
       <div class="container scrolled__container">
@@ -231,7 +231,7 @@
         </div>
         <ul class="goods scrolled__goods">
           <li class="goods__item">
-            <a href="" class="goods__link">Кофе</a>
+            <a href="./catalog.html" class="goods__link">Кофе</a>
             <div class="goods__drop">
               <ul class="goods__drop-list">
                 <li class="goods__drop-item">
