--- a/cabinet.html
+++ b/cabinet.html
@@ -21,7 +21,7 @@
           <li class="menu__item">
             <a href="./o-nas.html" class="menu__link">О нас</a>
           </li>
-          <li class="menu__item menu__item--active">
+          <li class="menu__item">
             <a href="./dostavka-i-oplata.html" class="menu__link">Доставка и оплата</a>
           </li>
           <li class="menu__item">
@@ -38,9 +38,9 @@
           <div class="toggle-menu__inner"></div>
         </div>
         <div class="login">
-          <a href="./personal.html" class="login__link">Войти</a>
-          <a href="./registration.html" class="login__link">Зарегистрироваться</a>
-        </div>
+          <a href="#" class="login__name">Имя Фамилия Отчество</a>
+          <button class="login__btn">Выход</button>
+        </div>                
       </div>
     </nav>
     <header class="header">
@@ -53,7 +53,7 @@
         <div class="header__content">
           <div class="header__content-row">
             <div class="header__content-col header__wrap">
-              <div class="city__wrap">
+              <div class="city__wrap">                  
                 <select name="city" id="city">
                   <option value="Москва" selected>Москва</option>
                 </select>
@@ -67,7 +67,7 @@
                     <i class="fa fa-search"></i>
                   </button>
                 </div>
-              </form>
+             </form>
             </div>
             <div class="header__content-col">
               <div class="phones">
@@ -82,7 +82,7 @@
               <div class="compare">
                 <a href="#" class="compare__link">
                   <span class="header__icon"><i class="fa fa-balance-scale"></i></span>
-                  <span class="compare__text">В сравнении&nbsp;<span class="compare__count">0</span></span>
+                  <span class="compare__text">В сравнении&nbsp;<span class="compare__count">0</span></span>                  
                 </a>
               </div>
             </div>
@@ -91,24 +91,24 @@
                 <a href="#" class="cart__link">
                   <div class="cart__img">
                     <span class="header__icon"><i class="fa fa-shopping-bag"></i></span>
-                  </div>
+                  </div>                
                   <div class="cart__text">
                     <span class="cart__count-text">Товаров</span>
                     <span class="cart__count-num">0</span>
-                    <br>
+                    <br>                         
                     <span class="cart__sum-text">На сумму</span>
                     <span class="cart__sum-num">0 руб</span>
-                  </div>
+                  </div>                
                 </a>
               </div>
             </div>
           </div>
           <div class="header__content-row">
             <ul class="goods">
-              <li class="goods__item">
+              <li class="goods__item">                
                 <a href="./catalog.html" class="goods__link">
-                  <img src="./img/header/coffee-icon.png" alt="" class="goods__img">
-                  <span class="goods__text">Кофе</span>
+                    <img src="./img/header/coffee-icon.png" alt="" class="goods__img">
+                    <span class="goods__text">Кофе</span>
                 </a>
                 <div class="goods__drop">
                   <ul class="goods__drop-list">
@@ -139,8 +139,8 @@
                   </ul>
                 </div>
               </li>
-              <li class="goods__item">
-                <a href="./catalog.html" class="goods__link">
+              <li class="goods__item">                
+                <a href="#" class="goods__link">
                   <img src="./img/header/tea-icon.png" alt="" class="goods__img">
                   <span class="goods__text">Чай</span>
                 </a>
@@ -183,36 +183,36 @@
                 </div>
               </li>
               <li class="goods__item">
-                <a href="./catalog.html" class="goods__link">
+                <a href="#" class="goods__link">                  
                   <img src="./img/header/dishes.png" alt="" class="goods__img">
                   <span class="goods__text">Посуда</span>
                 </a>
               </li>
-              <li class="goods__item">
-                <a href="./catalog.html" class="goods__link">
+              <li class="goods__item">                
+                <a href="#" class="goods__link">
                   <img src="./img/header/sweet-icon.png" alt="" class="goods__img">
                   <span class="goods__text">Сладости</span>
                 </a>
               </li>
-              <li class="goods__item">
-                <a href="./catalog.html" class="goods__link">
+              <li class="goods__item">                
+                <a href="#" class="goods__link">
                   <img src="./img/header/sugar-icon.png" alt="" class="goods__img">
                   <span class="goods__text">Сахар</span>
                 </a>
               </li>
-              <li class="goods__item">
-                <a href="./catalog.html" class="goods__link">
+              <li class="goods__item">                
+                <a href="#" class="goods__link">
                   <img src="./img/header/coffeemachine-icon.png" alt="" class="goods__img">
                   <span class="goods__text">Кофемашины</span>
                 </a>
               </li>
               <li class="goods__item">
-                <a href="./catalog.html" class="goods__link">
-                  <span class="goods__text">Кофе в шоколаде</span>
+                <a href="#" class="goods__link">
+                  <span class="goods__text">Кофе в  шоколаде</span>
                 </a>
               </li>
               <li class="goods__item">
-                <a href="./catalog.html" class="goods__link">
+                <a href="#" class="goods__link">
                   <span class="goods__text">Прочее</span>
                 </a>
               </li>
@@ -223,7 +223,7 @@
     </header>
     <div class="scrolled">
       <div class="container scrolled__container">
-        <button class="catalog">Каталог</button>
+          <button class="catalog">Каталог</button>        
         <div class="logo scrolled__logo">
           <a href="./index.html" class="logo__link">
             <img src="./img/scrolled/logo-gold-mini.png" alt="Компания Bonka" class="logo__pic">
@@ -231,7 +231,7 @@
         </div>
         <ul class="goods scrolled__goods">
           <li class="goods__item">
-            <a href="./catalog.html" class="goods__link">Кофе</a>
+            <a href="" class="goods__link">Кофе</a>
             <div class="goods__drop">
               <ul class="goods__drop-list">
                 <li class="goods__drop-item">
@@ -343,9 +343,9 @@
           </li>
         </ul>
         <div class="login login--scrolled">
-          <a href="#" class="login__link">Войти</a>
-          <a href="#" class="login__link">Зарегистрироваться</a>
-        </div>
+          <a href="#" class="login__name">Имя Фамилия Отчество</a>
+          <button class="login__btn">Выход</button>
+        </div>       
       </div>
     </div>
     <div class="container">
@@ -356,34 +356,73 @@
               <a href="./index.html" class="breadcrumbs__link">Главная</a>
             </li>
             <li class="breadcrumbs__item breadcrumbs__item--active">
-              <a class="breadcrumbs__link">Доставка и оплата</a>
+              <a class="breadcrumbs__link">Личный кабинет пользователя</a>
             </li>
           </ul>
-        </div>
-        <section class="delivery">
-          <h1 class="page-title">Доставка и оплата</h1>
-          <div class="delivery__desc">
-            <h2>Стоимость доставки по Москве.</h2>
-            <p>
-              <span>Бесплатная доставка при заказе от 3000 рублей.</span>
-              <br>
-              <span>При заказе до 3000 рублей стоимость доставки составляет 250 рублей.</span>
-            </p>
-            <h2>Сроки доставки.</h2>
-            <div>
-              <span>Мы обжариваем кофе только после получения вашего заказа.</span><br>
-              <span>Потому сроки доставки немного выше, чем в магазинах торгующих готовой продукцией.</span>
-              <ul> 
-                <li>Заказы, оформленные с понедельника по пятницу до 16:00, доставляются в понедельник следующей недели.
-                </li>
-                <li>Заказы, оформленные в пятницу после 17:30, а так же в субботу и воскресенье, доставляются во вторник
-                  следующей недели.</li>
-              </ul>
+        </div>        
+              
+        <section class="personal">            
+          <h1 class="page-title">Личный кабинет</h1>
+          <div class="client">
+            <div class="client__row">
+             <div class="client__info">
+                <h2 class="client__subtitle">Личные данные</h2>
+                <form action="#" name="client" class="client__form">
+                  <div class="client__form-block">
+                    <div class="client__form-col">
+                      <div class="client__form-row">
+                        <span class="client__form-text">Логин*</span>
+                        <input name="login" type="text" class="client__form-input">
+                      </div>
+                      <div class="client__form-row">
+                        <span class="client__form-text">Фио</span>
+                        <input name="name" type="text" class="client__form-input">
+                      </div>
+                      <div class="client__form-row">
+                        <span class="client__form-text">E-Mail*</span>
+                        <input name="mail" type="text" class="client__form-input">
+                      </div>
+                    </div>
+                    <div class="client__form-col">
+                      <div class="client__form-row">
+                        <span class="client__form-text">Телефон</span>
+                        <input name="phone" type="text" class="client__form-input">
+                      </div>
+                      <div class="client__form-row">
+                        <span class="client__form-text">Пароль</span>
+                        <input name="password" type="password" class="client__form-input">
+                      </div>
+                      <div class="client__form-row">
+                        <span class="client__form-text">Повторите</span>
+                        <input name="reply" type="password" class="client__form-input">
+                      </div>
+                    </div>
+                    <button class="client__form-btn">Редактировать</button>               
+                  </div>
+                </form>
+              </div>
+              <div class="client__card">
+                <h3 class="client__card-title">Статус:</h3>
+                <div class="client__card-block card">
+                  <div class="card__number">0123</div>
+                  <ul class="card__name">
+                    <li class="card__name-item">Имя</li>
+                    <li class="card__name-item">Фамилия</li>
+                    <li class="card__name-item">Отчество</li>
+                  </ul>
+                  <div class="card__bonus">
+                    <span class="card__bonus-text">Бонусные баллы:</span>
+                    <span class="card__bonus-value">0</span>
+                  </div>
+                </div>
+              </div>
             </div>
-            <h2>Условия оплаты.</h2>
-            <p>Вы можете оплатить заказ наличными курьеру.</p>
+            <div class="client__row">
+              <h2 class="client__subtitle">История заказов</h2>
+             
+            </div>
           </div>
-        </section>
+        </section> 
       </main>
     </div>
     <footer class="footer">
@@ -392,7 +431,7 @@
           <a href="#" class="logo__link">
             <img src="./img/footer/logo-gold.png" alt="Компания Bonka" class="logo__pic">
           </a>
-        </div>
+        </div>   
         <div class="footer__nav">
           <ul class="footer__nav-list">
             <li class="footer__nav-item">
@@ -412,7 +451,7 @@
             </li>
           </ul>
         </div>
-        <div class="footer__content">
+        <div class="footer__content">          
           <ul class="goods footer__goods">
             <li class="goods__item">
               <a href="" class="goods__link">Кофе</a>
